--- a/package.json
+++ b/package.json
@@ -4,8 +4,48 @@
   "dependencies": {
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/flow-deps": "./target/frontend",
-    "@vaadin/router": "^1.6.0"
+    "@vaadin/router": "^1.6.0",
+    "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/vaadin-crud": "1.1.0",
+    "@vaadin/vaadin-grid": "5.5.1",
+    "@vaadin/vaadin-icons": "4.3.1",
+    "@vaadin/vaadin-split-layout": "4.1.1",
+    "@vaadin/vaadin-cookie-consent": "1.1.2",
+    "@vaadin/vaadin-combo-box": "5.0.10",
+    "@vaadin/vaadin-core-shrinkwrap": "15.0.2",
+    "@vaadin/vaadin-upload": "4.2.2",
+    "@vaadin/vaadin-dialog": "2.2.1",
+    "@vaadin/vaadin-select": "2.1.7",
+    "@vaadin/vaadin-app-layout": "2.0.4",
+    "@vaadin/vaadin-item": "2.1.1",
+    "@vaadin/vaadin-board": "2.1.1",
+    "@vaadin/vaadin-notification": "1.4.0",
+    "@vaadin/vaadin-charts": "6.2.4",
+    "@vaadin/vaadin-grid-pro": "2.0.6",
+    "@vaadin/vaadin-progress-bar": "1.1.2",
+    "@vaadin/vaadin-shrinkwrap": "15.0.2",
+    "@vaadin/vaadin-ordered-layout": "1.1.0",
+    "@vaadin/vaadin-login": "1.0.1",
+    "@vaadin/vaadin-button": "2.2.2",
+    "@vaadin/vaadin-date-picker": "4.0.8",
+    "@vaadin/vaadin-text-field": "2.5.4",
+    "@vaadin/vaadin-menu-bar": "1.0.5",
+    "@vaadin/vaadin-custom-field": "1.0.11",
+    "@vaadin/vaadin-form-layout": "2.1.7",
+    "@vaadin/vaadin-accordion": "1.0.1",
+    "@polymer/iron-list": "3.0.2",
+    "@vaadin/vaadin-confirm-dialog": "1.1.6",
+    "@vaadin/vaadin-list-box": "1.2.0",
+    "@vaadin/vaadin-details": "1.0.1",
+    "@vaadin/vaadin-checkbox": "2.2.12",
+    "@polymer/iron-icon": "3.0.1",
+    "@vaadin/vaadin-time-picker": "2.0.6",
+    "@vaadin/vaadin-context-menu": "4.3.15",
+    "@vaadin/vaadin-radio-button": "1.2.6",
+    "@vaadin/vaadin-tabs": "3.0.5",
+    "@vaadin/vaadin-lumo-styles": "1.5.0",
+    "@vaadin/vaadin-material-styles": "1.2.3",
+    "@vaadin/vaadin-rich-text-editor": "1.1.1"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -25,7 +65,47 @@
   "vaadin": {
     "dependencies": {
       "@vaadin/router": "^1.6.0",
-      "@polymer/polymer": "3.2.0"
+      "@polymer/polymer": "3.2.0",
+      "@vaadin/vaadin-crud": "1.1.0",
+      "@vaadin/vaadin-grid": "5.5.1",
+      "@vaadin/vaadin-icons": "4.3.1",
+      "@vaadin/vaadin-split-layout": "4.1.1",
+      "@vaadin/vaadin-cookie-consent": "1.1.2",
+      "@vaadin/vaadin-combo-box": "5.0.10",
+      "@vaadin/vaadin-core-shrinkwrap": "15.0.2",
+      "@vaadin/vaadin-upload": "4.2.2",
+      "@vaadin/vaadin-dialog": "2.2.1",
+      "@vaadin/vaadin-select": "2.1.7",
+      "@vaadin/vaadin-app-layout": "2.0.4",
+      "@vaadin/vaadin-item": "2.1.1",
+      "@vaadin/vaadin-board": "2.1.1",
+      "@vaadin/vaadin-notification": "1.4.0",
+      "@vaadin/vaadin-charts": "6.2.4",
+      "@vaadin/vaadin-grid-pro": "2.0.6",
+      "@vaadin/vaadin-progress-bar": "1.1.2",
+      "@vaadin/vaadin-shrinkwrap": "15.0.2",
+      "@vaadin/vaadin-ordered-layout": "1.1.0",
+      "@vaadin/vaadin-login": "1.0.1",
+      "@vaadin/vaadin-button": "2.2.2",
+      "@vaadin/vaadin-date-picker": "4.0.8",
+      "@vaadin/vaadin-text-field": "2.5.4",
+      "@vaadin/vaadin-menu-bar": "1.0.5",
+      "@vaadin/vaadin-custom-field": "1.0.11",
+      "@vaadin/vaadin-form-layout": "2.1.7",
+      "@vaadin/vaadin-accordion": "1.0.1",
+      "@polymer/iron-list": "3.0.2",
+      "@vaadin/vaadin-confirm-dialog": "1.1.6",
+      "@vaadin/vaadin-list-box": "1.2.0",
+      "@vaadin/vaadin-details": "1.0.1",
+      "@vaadin/vaadin-checkbox": "2.2.12",
+      "@polymer/iron-icon": "3.0.1",
+      "@vaadin/vaadin-time-picker": "2.0.6",
+      "@vaadin/vaadin-context-menu": "4.3.15",
+      "@vaadin/vaadin-radio-button": "1.2.6",
+      "@vaadin/vaadin-tabs": "3.0.5",
+      "@vaadin/vaadin-lumo-styles": "1.5.0",
+      "@vaadin/vaadin-material-styles": "1.2.3",
+      "@vaadin/vaadin-rich-text-editor": "1.1.1"
     },
     "devDependencies": {
       "copy-webpack-plugin": "5.1.1",
@@ -40,6 +120,6 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.10.3"
     },
-    "hash": ""
+    "hash": "ef01c42f13efa9970910fa5a80bd07c1c91308c8e69a2cf8c24b88f5e224c0b8"
   }
 }
