add json reader with writing and reading examples

--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,16 @@
             <artifactId>vaadin-testbench</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <defaultGoal>jetty:run</defaultGoal>
