--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-lang3</artifactId>
+        	<version>3.10</version>
+        </dependency>
     </dependencies>
 
 
